--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: ""
 url: "localhost:3000"
 
 # User settings
-username: iavanish
+username: Avanish Singh
 user_description: 
 user_title: Software Engineer, Hobbyist Programmer, Competitive Coder
 email: avanishsingh123@gmail.com
